@@ -140,13 +140,13 @@ Common Gateway Interface Class for loading/saving object in file.
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2011-2015 Michal Špaček
+ © 2011-2015 Michal Josef Špaček
  BSD 2-Clause License
 
 =head1 VERSION
