@@ -71,12 +71,12 @@ SEE ALSO
         Common Gateway Interface Class for loading/saving object in file.
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2015 Michal Špaček
+     © 2011-2015 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
