@@ -1,6 +1,7 @@
 0.07
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
  - Update Module::Install to 1.18 version.
+ - Update author name
 
 0.06 2015-09-26T10:25:40+02:00
  - Improve LICENSE AND COPYRIGHT section in doc.
